--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "ahsanayaz.com",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "Personal website of Muhammad Ahsan Ayaz",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Muhammad Ahsan Ayaz <ahsan.ubitian@gmail.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/ahsanayaz.com/issues"
   },
   "dependencies": {
     "gatsby": "^2.15.14",
     "gatsby-image": "^2.2.18",
+    "gatsby-plugin-advanced-sitemap": "^1.4.1",
     "gatsby-plugin-feed": "^2.3.12",
     "gatsby-plugin-google-analytics": "^2.1.16",
     "gatsby-plugin-manifest": "^2.2.16",
@@ -17,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-sharp": "^2.2.21",
     "gatsby-plugin-typography": "^2.3.7",
+    "gatsby-plugin-zopfli": "^1.2.4",
     "gatsby-remark-copy-linked-files": "^2.1.19",
     "gatsby-remark-images": "^3.1.21",
     "gatsby-remark-prismjs": "^3.3.13",
@@ -38,15 +40,19 @@
   "devDependencies": {
     "prettier": "^1.18.2"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/ahsanayaz.com/#readme",
   "keywords": [
-    "gatsby"
+    "ahsanayaz",
+    "ahsan",
+    "ahsan ayaz",
+    "blog",
+    "angular"
   ],
   "license": "MIT",
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/ahsanayaz.com.git"
   },
   "scripts": {
     "build": "gatsby build",
