--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-remark-prismjs": "^3.3.13",
     "gatsby-remark-responsive-iframe": "^2.2.16",
     "gatsby-remark-smartypants": "^2.1.8",
+    "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-source-filesystem": "^2.1.22",
     "gatsby-transformer-remark": "^2.6.22",
     "gatsby-transformer-sharp": "^2.2.14",
