--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "gatsby-plugin-zopfli": "^1.2.4",
     "gatsby-remark-copy-linked-files": "^2.1.19",
     "gatsby-remark-images": "^3.1.21",
-    "gatsby-remark-prismjs": "^3.3.13",
     "gatsby-remark-responsive-iframe": "^2.2.16",
     "gatsby-remark-smartypants": "^2.1.8",
     "gatsby-remark-social-cards": "^0.4.1",
+    "gatsby-remark-vscode": "^1.2.0",
     "gatsby-source-filesystem": "^2.1.22",
     "gatsby-transformer-remark": "^2.6.22",
     "gatsby-transformer-sharp": "^2.2.14",
