--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "url": "https://github.com/ahsanayaz.com/issues"
   },
   "dependencies": {
+    "emotion": "^10.0.17",
     "gatsby": "^2.15.14",
     "gatsby-image": "^2.2.18",
     "gatsby-plugin-advanced-sitemap": "^1.4.1",
+    "gatsby-plugin-disqus": "^1.1.2",
     "gatsby-plugin-feed": "^2.3.12",
     "gatsby-plugin-google-analytics": "^2.1.16",
     "gatsby-plugin-manifest": "^2.2.16",
@@ -30,8 +32,10 @@
     "gatsby-transformer-sharp": "^2.2.14",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
+    "react-custom-share": "^0.4.8",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
