--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "emotion": "^10.0.17",
+    "firebase": "^6.6.1",
     "gatsby": "^2.15.14",
     "gatsby-image": "^2.2.18",
     "gatsby-plugin-advanced-sitemap": "^1.4.1",
@@ -19,6 +20,7 @@
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-sharp": "^2.2.21",
+    "gatsby-plugin-sw": "^1.0.1",
     "gatsby-plugin-typography": "^2.3.7",
     "gatsby-plugin-zopfli": "^1.2.4",
     "gatsby-remark-copy-linked-files": "^2.1.19",
