--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-advanced-sitemap": "^1.4.1",
     "gatsby-plugin-disqus": "^1.1.2",
     "gatsby-plugin-feed": "^2.3.12",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.1.16",
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-offline": "^2.2.10",
