--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-image": "^2.2.18",
     "gatsby-plugin-advanced-sitemap": "^1.4.1",
     "gatsby-plugin-disqus": "^1.1.2",
+    "gatsby-plugin-draft": "^0.1.0",
     "gatsby-plugin-feed": "^2.3.12",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.1.16",
