--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "gatsby-remark-images": "^3.1.21",
     "gatsby-remark-responsive-iframe": "^2.2.16",
     "gatsby-remark-smartypants": "^2.1.8",
-    "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-remark-vscode": "^1.2.0",
     "gatsby-source-filesystem": "^2.1.22",
     "gatsby-transformer-remark": "^2.6.22",
     "gatsby-transformer-sharp": "^2.2.14",
+    "jimp": "^0.16.1",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
     "react-custom-share": "^0.4.8",
