--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "url": "https://github.com/ahsanayaz.com/issues"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "emotion": "^10.0.17",
     "firebase": "^6.6.1",
-    "gatsby": "^2.15.14",
+    "gatsby": "^2.31.1",
     "gatsby-image": "^2.2.18",
     "gatsby-plugin-advanced-sitemap": "^1.4.1",
     "gatsby-plugin-disqus": "^1.1.2",
     "gatsby-plugin-draft": "^0.1.0",
-    "gatsby-plugin-feed": "^2.3.12",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.1.16",
     "gatsby-plugin-manifest": "^2.2.16",
+    "gatsby-plugin-mdx": "^1.9.0",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-sharp": "^2.2.21",
@@ -31,7 +34,6 @@
     "gatsby-remark-smartypants": "^2.1.8",
     "gatsby-remark-vscode": "^1.2.0",
     "gatsby-source-filesystem": "^2.1.22",
-    "gatsby-transformer-remark": "^2.6.22",
     "gatsby-transformer-sharp": "^2.2.14",
     "jimp": "^0.16.1",
     "prismjs": "^1.17.1",
