--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/ahsanayaz.com/issues"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^2.3.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "emotion": "^10.0.17",
@@ -29,14 +30,15 @@
     "gatsby-plugin-typography": "^2.3.7",
     "gatsby-plugin-zopfli": "^1.2.4",
     "gatsby-remark-copy-linked-files": "^2.1.19",
+    "gatsby-remark-highlight-code": "^2.1.1",
     "gatsby-remark-images": "^3.1.21",
     "gatsby-remark-responsive-iframe": "^2.2.16",
     "gatsby-remark-smartypants": "^2.1.8",
-    "gatsby-remark-vscode": "^1.2.0",
+    "gatsby-remark-vscode": "^3.2.0",
     "gatsby-source-filesystem": "^2.1.22",
+    "gatsby-transformer-remark": "^2.16.0",
     "gatsby-transformer-sharp": "^2.2.14",
     "jimp": "^0.16.1",
-    "prismjs": "^1.17.1",
     "react": "^16.9.0",
     "react-custom-share": "^0.4.8",
     "react-dom": "^16.9.0",
