--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@deckdeckgo/highlight-code": "^2.4.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "bootstrap": "^4.6.0",
     "emotion": "^10.0.17",
     "firebase": "^6.6.1",
     "gatsby": "^2.31.1",
@@ -20,10 +21,12 @@
     "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.1.16",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-mdx": "^1.9.0",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-sharp": "^2.2.21",
     "gatsby-plugin-sw": "^1.0.1",
     "gatsby-plugin-typography": "^2.3.7",
@@ -43,12 +46,15 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-typography": "^0.16.19",
+    "sass": "^1.32.8",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "http-proxy-middleware": "^1.0.6",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2"
   },
   "homepage": "https://github.com/ahsanayaz.com/#readme",
@@ -69,7 +75,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "run-p start:**",
+    "start:app": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
