--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-mdx": "^1.9.0",
-    "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-sharp": "^2.2.21",
     "gatsby-plugin-typography": "^2.3.7",
