--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.2.16",
     "gatsby-plugin-mdx": "^1.9.0",
+    "gatsby-plugin-preload-fonts": "^2.0.0",
     "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^3.2.0",
@@ -76,6 +77,7 @@
     "start": "run-p start:**",
     "start:app": "npm run develop",
     "serve": "gatsby serve",
+    "preload-fonts": "gatsby-preload-fonts",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   }
